--- a/demonstration.html
+++ b/demonstration.html
@@ -192,9 +192,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -391,6 +393,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                       <a href="https://github.com/SongBase/Audovia"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -410,6 +413,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -452,10 +456,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
                   color="#551A8B" face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -499,10 +505,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
 
 
 
@@ -613,121 +621,8 @@ src="https://player.vimeo.com/video/132335980?title=0&amp;byline=0&amp;portrait=
                             mozallowfullscreen="" allowfullscreen=""
                             width="640" frameborder="0" height="480"></iframe>
                         </div>
-                      </span><br clear="all">
-                      <div class="left">&nbsp; <span class="body"><br>
-                          Within the application, use <em>File/Template</em>
-                          to create a song, then <em>File/Tree View</em>
-                          and expand the nodes.&nbsp; Select each bar in
-                          turn and enter the notes<strong><em></em></strong>.&nbsp;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                          Select "Song" and press Play to play back your
-                          music.&nbsp; From the <em>File</em> menu, you
-                          can export to MIDI, MusicXML or WAV for music
-                          processing or publishing.&nbsp; The WAV files
-                          can be opened in <a class="nounderline"
-                            target="_blank"
-                            href="http://audacity.sourceforge.net/"><span
-                              style="font-style: italic;"><span
-                                style="font-weight: bold;">Audacity</span></span></a>,
-                          then exported to MP3.<br>
-                          <br style="clear:right;">
-                          <br>
+                      </span><br style="clear:right;">
+                      <div class="left"><span class="body"> <br>
                         </span></div>
                     </blockquote>
                     <span class="body"><em> </em></span>
