--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -141,6 +143,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
 
 
 
@@ -207,10 +210,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -261,6 +266,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -288,10 +294,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
 
 
 
@@ -348,6 +356,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         Songs can have up to 15 instrumental voices and
                         a percussion track with instruments chosen from
                         a soundbank of 128 instruments.&nbsp; Either the
@@ -363,12 +372,120 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         numerically.&nbsp; You can use notes from C0 to
                         G10, corresponding to MIDI values 0 to
                         127.&nbsp; Middle C is C5.<br>
-                        <br>
-                        <span style="font-weight: bold;">Audovia</span>
-                        will play back your music and also export to
-                        MIDI, MusicXML and WAV files for music
-                        processing and music publishing.<br>
                       </span><br>
+                      <span class="body">Within the application, use <em>File/Template</em>
+                        to create a song, then <em>File/Tree View</em>
+                        and expand the nodes.&nbsp; Select each bar in
+                        turn and enter the notes<strong><em></em></strong>.&nbsp;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                        Select "Song" and press Play to play back your
+                        music.&nbsp; From the <em>File</em> menu, you
+                        can export to MIDI, MusicXML or WAV for music
+                        processing or publishing.&nbsp; The WAV files
+                        can be opened in <a class="nounderline"
+                          target="_blank"
+                          href="http://audacity.sourceforge.net/"><span
+                            style="font-style: italic;"><span
+                              style="font-weight: bold;">Audacity</span></span></a>,
+                        then exported to MP3.</span><br>
+                      <br>
                       <div class="left"><span class="body"> Please see
                           the <strong><em><a
                                 href="doc/AudoviaDocumentation-3-0-8.pdf"
@@ -449,38 +566,12 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                             Microsoft Windows you will first need to
                             install the latest version of Java from <a
                               href="http://java.com/"
-                              class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>
-                            or, if you are using Linux Ubuntu,<strong> </strong>you
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                            will need to install Oracle's Java 8 from <span
+                              class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a><span
                               style="font-weight: bold;"><a
                                 href="https://launchpad.net/%7Ewebupd8team/+archive/ubuntu/java"
                                 class="nounderline" target="_blank"><span
-                                  style="font-style: italic;">WebUpd8</span></a></span>.<br>
-                          </span><span class="body"><br>
-                            For best results on Linux Ubuntu, we
-                            recommend using the Gnome Desktop
-                            Environment.<br>
+                                  style="font-style: italic;"></span></a></span>.</span><span
+                            class="body"><br>
                             <!--
                             Top download destination this month:<img
                               style=" width: 50px; height: 33px;"
