--- a/index.html
+++ b/index.html
@@ -112,9 +112,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -147,6 +151,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -219,6 +225,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -249,10 +257,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
-                  face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+                  face="Verdana"><big><b>Video</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -309,10 +321,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
 
 
 
@@ -375,6 +391,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         Songs can have up to 15 instrumental voices and
                         a percussion track with instruments chosen from
                         a soundbank of 128 instruments.&nbsp; Either the
@@ -395,6 +413,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         to create a song, then <em>File/Tree View</em>
                         and expand the nodes.&nbsp; Select each bar in
                         turn and enter the notes<strong><em></em></strong>.&nbsp;
+
+
 
 
 
