--- a/sharing.html
+++ b/sharing.html
@@ -180,9 +180,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -353,6 +357,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       <a href="https://github.com/SongBase/Audovia"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -372,6 +378,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -408,10 +416,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
-                  face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+                  face="Verdana"><big><b>Video</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -448,10 +460,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
 
 
 
@@ -564,6 +580,8 @@ myAudioitem.pause();
                           <br>
                           If you are setting up a shared database, use
                           the <span style="font-style: italic;">Database/Database
+
+
 
 
 
