--- a/index.html
+++ b/index.html
@@ -114,9 +114,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -151,6 +155,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -227,10 +233,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -291,10 +301,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -355,6 +369,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
@@ -367,6 +383,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                     <blockquote><span class="body"><strong></strong>Make
                         music on your laptop or PC with <span
                           style="font-weight: bold;">Audovia</span>.&nbsp;
+
+
 
 
 
@@ -515,6 +533,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         Select "Song" and press Play to play back your
                         music.&nbsp; From the <em>File</em> menu, you
                         can export to MIDI, MusicXML or WAV for music
@@ -531,29 +551,29 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                                 href="doc/AudoviaDocumentation-3-0-8.pdf"
                                 class="nounderline" target="_blank">Documentation</a></em></strong>
                           for more information.<br>
-                          <br style="clear:right;">
-                          <!-- <br> -->
-                          <div style="margin-left: 40px;">
-                            <!--<form style="text-align: center;"
+                        </span> <br style="clear:right;">
+                        <!-- <br> -->
+                        <div style="margin-left: 40px;">
+                          <!--<form style="text-align: center;"
                             action="https://www.paypal.com/cgi-bin/webscr"
                             method="post" target="_top"> --><span
-                              class="fullsize"><em>Audovia 3.0.8 for
-                                Windows</em> &nbsp;</span>
-                            <!--
+                            class="fullsize"><em>Audovia 3.0.8 for
+                              Windows</em> &nbsp;</span>
+                          <!--
 <a
 href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-8.msi"><img
                                 alt="Windows" src="image/Windows.png"
                                 style="border: 0px solid; border: 0px
                                 solid; width: 108px; height: 34px;
                                 margin-bottom: 12px;" align="middle"></a> -->
-                            <a
+                          <a
 href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-8.msi"
-                              style="text-decoration:none;"><button
-                                type="button"
-                                style="background-color:#eeeeee;
-                                padding:5px; cursor:pointer"><font
-                                  color="#551A8B" face="Verdana"><big><b>Download</b></big></font></button></a>
-                            <!--
+                            style="text-decoration:none;"><button
+                              type="button"
+                              style="background-color:#eeeeee;
+                              padding:5px; cursor:pointer"><font
+                                color="#551A8B" face="Verdana"><big><b>Download</b></big></font></button></a>
+                          <!--
                             <a
 href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_i386.deb"><img
                                 alt="Linux (32-bit)"
@@ -562,13 +582,13 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_i3
                                 solid; width: 142px; height: 34px;
                                 margin-bottom: 12px;" align="middle"></a>
 -->
-                            <!--<a href="https://apps.ubuntu.com/cat/applications/audovia/"
+                          <!--<a href="https://apps.ubuntu.com/cat/applications/audovia/"
                               target="_blank"><img alt="Linux (32-bit)"
                                 src="image/Linux%2832-bit%29.png"
                                 style="border: 0px solid; border: 0px
                                 solid; width: 142px; height: 34px;
                                 margin-bottom: 12px;" align="middle"></a> -->
-                            <!--
+                          <!--
                             <a
 href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_amd64.deb"><img
                                 alt="Linux (64-bit)"
@@ -577,14 +597,14 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                                 solid; width: 142px; height: 34px;
                                 margin-bottom: 12px;" align="middle"></a>
 -->
-                            <!--
+                          <!--
 <a href="https://apps.ubuntu.com/cat/applications/audovia/"
                               target="_blank"><img alt="Linux (64-bit)"
                                 src="image/Linux%2864-bit%29.png"
                                 style="border: 0px solid; border: 0px
                                 solid; width: 142px; height: 34px;
                                 margin-bottom: 12px;" align="middle"></a> -->
-                            <!--<input name="cmd" value="_s-xclick"
+                          <!--<input name="cmd" value="_s-xclick"
                               type="hidden"> <input
                               name="hosted_button_id"
                               value="RSU3TXL8H9BZ4" type="hidden"> <input
@@ -596,8 +616,8 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                               align="middle"> <img alt=""
                               src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif"
                               border="0" width="1" height="1"> </form>-->
-                          </div>
-                        </span><br>
+                        </div>
+                        <br>
                         <div class="left"><span class="body"> The Linux
                             version is available from the Ubuntu
                             Software Center.<br>
