--- a/index.html
+++ b/index.html
@@ -116,9 +116,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -155,6 +159,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -235,10 +241,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -303,10 +313,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -371,6 +385,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
@@ -383,6 +399,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                     <blockquote><span class="body"><strong></strong>Make
                         music on your laptop or PC with <span
                           style="font-weight: bold;">Audovia</span>.&nbsp;
+
+
 
 
 
@@ -535,6 +553,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         Select "Song" and press Play to play back your
                         music.&nbsp; From the <em>File</em> menu, you
                         can export to MIDI, MusicXML or WAV for music
@@ -547,10 +567,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         then exported to MP3.</span><br>
                       <br>
                       <div class="left"><span class="body"> Please see
-                          the <strong><em><a
-                                href="doc/AudoviaDocumentation-3-0-8.pdf"
-                                class="nounderline" target="_blank">Documentation</a></em></strong>
-                          for more information.<br>
+                          the <a
+                            href="doc/AudoviaDocumentation-3-0-8.pdf"
+                            class="nounderline" target="_blank"><span
+                              style="font-weight: bold; font-style:
+                              italic;">Documentation</span></a> for more
+                          information.<br>
                         </span> <br style="clear:right;">
                         <!-- <br> -->
                         <div style="margin-left: 40px;">
