--- a/index.html
+++ b/index.html
@@ -118,9 +118,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -159,6 +163,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -243,10 +249,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -315,10 +325,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -387,6 +401,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
@@ -399,6 +415,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                     <blockquote><span class="body"><strong></strong>Make
                         music on your laptop or PC with <span
                           style="font-weight: bold;">Audovia</span>.&nbsp;
+
+
 
 
 
@@ -555,6 +573,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         Select "Song" and press Play to play back your
                         music.&nbsp; From the <em>File</em> menu, you
                         can export to MIDI, MusicXML or WAV for music
@@ -570,8 +590,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           the <a
                             href="doc/AudoviaDocumentation-3-0-8.pdf"
                             class="nounderline" target="_blank"><span
-                              style="font-weight: bold; font-style:
-                              italic;">Documentation</span></a> for more
+                              style="font-style: italic; font-weight:
+                              bold;">Documentation</span></a> for more
                           information.<br>
                         </span> <br style="clear:right;">
                         <!-- <br> -->
