--- a/index.html
+++ b/index.html
@@ -121,9 +121,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -165,6 +167,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
 
 
 
@@ -255,10 +258,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -333,10 +338,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -411,6 +418,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
@@ -423,6 +431,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                     <blockquote><span class="body"><strong></strong>Make
                         music on your laptop or PC with <span
                           style="font-weight: bold;">Audovia</span>.&nbsp;
+
 
 
 
@@ -585,6 +594,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         Select "Song" and press Play to play back your
                         music.&nbsp; From the <em>File</em> menu, you
                         can export to MIDI, MusicXML or WAV for music
@@ -610,7 +620,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                             action="https://www.paypal.com/cgi-bin/webscr"
                             method="post" target="_top"> --><span
                             class="fullsize"><em>Audovia 3.0.8 for
-                              Windows</em> &nbsp;</span>
+                              Microsoft Windows (free)</em> &nbsp;</span>
                           <!--
 <a
 href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-8.msi"><img
@@ -671,8 +681,8 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                         </div>
                         <br>
                         <div class="left"><span class="body"> The Linux
-                            version is available from the Ubuntu
-                            Software Center.<br>
+                            version (US$ 9.99) is available from the
+                            Ubuntu Software Center.<br>
                             <br>
                             Before running <strong>Audovia</strong> on
                             Microsoft Windows you will first need to
