--- a/examples.html
+++ b/examples.html
@@ -178,9 +178,15 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
+
 
 
 
@@ -349,6 +355,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
                       <a href="https://github.com/SongBase/Audovia"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -368,6 +377,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
+
+
+
 
 
 
@@ -404,10 +416,16 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Video</b></big></font></button></a>&nbsp;&nbsp;
+
+
+
 
 
 
@@ -444,10 +462,16 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
+
 
 
 
@@ -526,18 +550,19 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                                       class="composer">G F Handel</span></td>
                                 </tr>
                                 <tr>
-                                  <td style="vertical-align: top;"><br>
-                                  </td>
-                                  <td style="vertical-align: top;"><span
-                                      class="composer">G F Handel</span></td>
-                                </tr>
-                                <tr>
                                   <td style="width: 30px;
                                     vertical-align: top;"><br>
                                   </td>
                                   <td style="vertical-align: top;"><span
                                       class="composer">G F Handel</span></td>
                                 </tr>
+                                <!--<tr>
+                                  <td style="width: 30px;
+                                    vertical-align: top;"><br>
+                                  </td>
+                                  <td style="vertical-align: top;"><span
+                                      class="composer">G F Handel</span></td>
+                                </tr>-->
                               </tbody>
                             </table>
                           </td>
@@ -584,13 +609,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                                       id="song5">Arrival of the Queen of
                                       Sheba</span></td>
                                 </tr>
-                                <tr>
+                                <!--<tr>
                                   <td style="vertical-align: top;"><span
                                       onclick="aud_play_pause(song[7],
                                       myAudio[7])" class="song"
                                       id="song7">Messiah 1 Sinfony</span><span
                                       class="xml"><em></em></span> </td>
-                                </tr>
+                                </tr>-->
                               </tbody>
                             </table>
                           </td>
@@ -694,15 +719,14 @@ myAudioitem.pause();
                         to licensing reasons we are unable to include
                         GM.DLS with the Linux versions of <span
                           style="font-weight: bold;">Audovia</span>.<br>
-                        <br>
-                      </span><span class="body">Handel's Messiah No 1
+                        <!--<br>--> </span><!--<span class="body">Handel's Messiah No 1
                         Sinfony was produced using the SGM-V2.01.sf2
                         soundfont. &nbsp;The oboe and cello parts were
                         cloned from the violin 1 and basso continuo bass
                         parts respectively.&nbsp; The MIDI file from <span
                           style="font-weight: bold;">Audovia</span> was
                         imported into SynthFont and Played to File (MP3)
-                        at 320 kbs.</span></blockquote>
+                        at 320 kbs.</span>--></blockquote>
                     <span class="body"><em><br>
                         <br>
                       </em></span>
